# AI_Soccer_Predections

./: .gitignore  CLAUDE.md  co-op.md
worldcup_prediction_lab/: .env.example  README.md  pyproject.toml
worldcup_prediction_lab/config/: sources.yaml  team_aliases.csv
worldcup_prediction_lab/reports/backtests/: championship_odds_2026-06-21.md  elo_vs_climatology.md  elo_vs_market.md  forecast_scorecard.md  live_forecast_2026-06-21.md  live_forecast_2026-06-22.md  live_forecast_2026-06-23.md  live_forecast_2026-06-24.md  live_forecast_2026-06-25.md  live_forecast_2026-06-26.md  live_forecast_2026-06-27.md  live_forecast_2026-06-28.md  live_forecast_2026-06-29.md  live_forecast_overlay_2026-06-21.md  live_forecast_overlay_2026-06-27.md  market_blend.md  market_disagreement_2026-06-21.md  market_distillation.md  overlay_scorecard.md  recency_experiment.md  tuning_market_session_2026-06-27.md
worldcup_prediction_lab/reports/data_quality/: INGESTION_REPORT.md  footballdata_market_odds_q1.md  footballdata_market_odds_schema_sample.csv  martj42_international_results_i3.md  openfootball_worldcup_2026_i4.md
worldcup_prediction_lab/reports/model_cards/: baseline_climatology.md  (+1 more)
worldcup_prediction_lab/research/: BACKTEST.md  CRON_PROMPT.md  DAILY_PLAYBOOK.md  LEADERBOARD.md  dashboard.html  fusion_dashboard.html  research_log.md
worldcup_prediction_lab/scripts/: README.md  run_daily_update.ps1  run_research_lab.ps1
worldcup_prediction_lab/tests/: __init__.py  test_bracket_resolver.py  test_forecast_live.py  test_forecast_overlay.py  test_run_daily_update.py
(+165 files in other folders)
